--- a/playbooks/k8s_cluster.yml
+++ b/playbooks/k8s_cluster.yml
@@ -1,11 +1,26 @@
-- hosts: k8s
-  roles: [common, containerd, kube_pkg]
+- name: Prepare & bootstrap Kubernetes cluster
+  hosts: k8s
+  become: yes
+  roles:
+    - k8s/common
+    - k8s/containerd
+    - k8s/kube_pkg
 
-- hosts: k8s[0]
-  roles: [kube_init]
+- name: Initialize first control‑plane node
+  hosts: node1
+  become: yes
+  roles:
+    - k8s/kube_init
 
-- hosts: k8s[1:3]
-  roles: [kube_join]
+- name: Join additional control‑plane + workers
+  hosts: node2:node3
+  become: yes
+  roles:
+    - k8s/kube_join
 
-- hosts: k8s
-  roles: [cni, argocd]   
+- name: Deploy CNI & Argo CD
+  hosts: k8s
+  become: yes
+  roles:
+    - k8s/cni
+    - k8s/argocd
