fixing issues with syntax

--- a/roles/k8s/containerd/tasks/main.yml
+++ b/roles/k8s/containerd/tasks/main.yml
@@ -1,13 +1,7 @@
-- name: Check if Containerd config exists
-  ansible.builtin.stat:
-    path: /etc/containerd/config.toml
-  register: containerd_cfg
-
 - name: Dump default containerd config (once only)
-  ansible.builtin.command: containerd config default > /etc/containerd/config.toml
+  ansible.builtin.command: containerd config default | sudo tee /etc/containerd/config.toml > /dev/null
   args:
     creates: /etc/containerd/config.toml
-  when: not containerd_cfg.stat.exists
 
 - name: Enable SystemdCgroup in containerd (only if file is present)
   ansible.builtin.replace:
@@ -15,11 +9,8 @@
     regexp: 'SystemdCgroup = false'
     replace: 'SystemdCgroup = true'
     backup: yes
-  when: containerd_cfg.stat.exists
 
-- name: Restart containerd if config changed
+- name: Restart containerd
   ansible.builtin.service:
     name: containerd
     state: restarted
-  when: containerd_cfg.stat.exists and
-        "'SystemdCgroup = true' not in containerd_cfg.stat.checksum"
