--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -1,7 +1,7 @@
 ansible_user: ladino
 
 # K8s versions
-kube_version: "1.33"
+kube_version: "1.33.3-1.1"
 pod_network_cidr: "10.244.0.0/16"
 
 # Argo CD
