--- a/roles/k8s/kube_join/tasks/main.yml
+++ b/roles/k8s/kube_join/tasks/main.yml
@@ -1,11 +1,16 @@
-- name: Fetch join script from node1
-  ansible.builtin.fetch:
-    src: /tmp/join.sh
-    dest: /tmp/join.sh
-    flat: yes
-  delegate_to: "{{ groups['k8s'][0] }}"
+- name: Join additional control-plane nodes
+  hosts: "{{ groups['k8s'][1:] }}"
+  become: true
+  tasks:
+    - name: Fetch join.sh from first control-plane node
+      ansible.builtin.fetch:
+        src: /tmp/join.sh
+        dest: /tmp/join.sh
+        flat: yes
+      delegate_to: "{{ groups['k8s'][0] }}"
+      run_once: true
 
-- name: Run join as control‑plane+worker
-  ansible.builtin.shell: bash /tmp/join.sh --control-plane --certificate-key {{ lookup('file', '/etc/kubernetes/pki/ca.crt') }}
-  args:
-    creates: /etc/kubernetes/kubelet.conf
+    - name: Run kubeadm join using fetched script
+      ansible.builtin.shell: bash /tmp/join.sh
+      args:
+        creates: /etc/kubernetes/kubelet.conf
