--- a/group_vars/lb.yml
+++ b/group_vars/lb.yml
@@ -1,7 +1,10 @@
-vip_address: 192.168.1.20
-vip_interface: eth0
+haproxy_cfg_path: /etc/haproxy/haproxy.cfg
 
 k8s_control_plane_nodes:
   - { name: k8cluster1, ip: 192.168.1.90 }
   - { name: k8cluster2, ip: 192.168.1.89 }
   - { name: k8cluster3, ip: 192.168.1.91 }
+
+vip_address: 192.168.1.20
+vip_interface: eth0
+
