--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -4,6 +4,9 @@ ansible_user: ladino
 kube_version: "1.33.3-1.1"
 pod_network_cidr: "10.244.0.0/16"
 
+# KeepAliveD configuration VIP
+vip_address: 192.168.1.20
+
 # Argo CD
 argocd_version: "v2.10.8"
 argocd_namespace: "argocd"
