need to ensure running remote copy runs as root

--- a/roles/k8s/kube_init/tasks/main.yml
+++ b/roles/k8s/kube_init/tasks/main.yml
@@ -22,6 +22,8 @@
     mode: 0600
     owner: "{{ ansible_user }}"
     group: "{{ ansible_user }}"
+    remote_src: true
+  become: true
 
 - name: Generate cert key and control-plane join command
   ansible.builtin.shell: |
