--- a/roles/k8s/kube_join/tasks/main.yml
+++ b/roles/k8s/kube_join/tasks/main.yml
@@ -1,11 +1,19 @@
 - name: Fetch join.sh from first control-plane node
-  ansible.builtin.fetch:
+  become: true
+  delegate_to: "{{ groups['k8s'][0] }}"
+  fetch:
     src: /tmp/join.sh
     dest: /tmp/join.sh
     flat: yes
   run_once: true
 
-- name: Run kubeadm join using fetched script
-  ansible.builtin.shell: bash /tmp/join.sh
+- name: Copy join.sh to other control-plane and worker nodes
+  copy:
+    src: /tmp/join.sh
+    dest: /tmp/join.sh
+    mode: '0755'
+
+- name: Run kubeadm join using copied script
+  shell: bash /tmp/join.sh
   args:
     creates: /etc/kubernetes/kubelet.conf
