added cmd center

--- a/inventory.ini
+++ b/inventory.ini
@@ -6,3 +6,6 @@ k8cluster3 ansible_host=192.168.1.91
 [lb]
 nginx1 ansible_host=192.168.1.92   # your two 2 vCPU/4 GB nginx VMs
 nginx2 ansible_host=192.168.1.93
+
+[cmd_center]
+cmd_center1 ansible_host=192.168.1.88
