--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -1,17 +1,11 @@
 ansible_user: ladino
 
-# K8s versions
-kube_version: "1.33.3-1.1"
-pod_network_cidr: "10.244.0.0/16"
-
 # KeepAliveD configuration VIP
 vip_address: 192.168.1.20
-
-# Argo CD
-argocd_version: "v2.10.8"
-argocd_namespace: "argocd"
-argocd_server_service_type: "LoadBalancer"
 
 # NGINX LB cert paths
 nginx_lb_cert: "/etc/nginx/certs/tls.crt"
 nginx_lb_key:  "/etc/nginx/certs/tls.key"
+
+# k8s versions
+kube_version: "1.33.3-1.1"
