--- a/roles/k8s/cni/tasks/main.yml
+++ b/roles/k8s/cni/tasks/main.yml
@@ -1,5 +1,11 @@
-- name: Deploy Calico CNI
-  kubernetes.core.k8s:
-    state: present
-    src: https://docs.projectcalico.org/manifests/calico.yaml
-    kubeconfig: /etc/kubernetes/admin.conf
+- name: Download Calico manifest
+  get_url:
+    url: https://raw.githubusercontent.com/projectcalico/calico/v3.30.2/manifests/calico.yaml
+    dest: /tmp/calico.yaml
+  delegate_to: "{{ groups['k8s'][0] }}"
+  run_once: true
+
+- name: Apply Calico manifest using kubectl
+  command: kubectl apply -f /tmp/calico.yaml --kubeconfig /etc/kubernetes/admin.conf
+  delegate_to: "{{ groups['k8s'][0] }}"
+  run_once: true
