adding common layout and refector kubectl code

--- a/playbooks/k8s_cluster.yml
+++ b/playbooks/k8s_cluster.yml
@@ -6,6 +6,7 @@
     - k8s/containerd
     - k8s/docker
     - k8s/kube_pkg
+    - common/apps/kubectl
 
 - name: Initialize first control‑plane node
   hosts: k8cluster1
