import role into cmd_center tasks

--- a/roles/cmd_center/tasks/main.yml
+++ b/roles/cmd_center/tasks/main.yml
@@ -1,3 +1,8 @@
+- name: Include common kubectl logic from shared role
+  import_role:
+    name: common
+  tasks_from: apps/kubectl.yml
+
 - name: Ensure pip and base tools are installed
   apt:
     name:
