--- a/roles/cmd_center/tasks/main.yml
+++ b/roles/cmd_center/tasks/main.yml
@@ -1,8 +1,3 @@
-- name: Include common kubectl logic from shared role
-  import_role:
-    name: common
-    tasks_from: apps/kubectl/main.yml
-
 - name: Ensure pip and base tools are installed
   apt:
     name:
@@ -12,14 +7,14 @@
     update_cache: true
   become: yes
 
-- name: Install required Python packages
-  pip:
+- name: Install Python packages via apt
+  apt:
     name:
-      - kubernetes
-      - openshift
-      - pyyaml
-    executable: pip3
-  become: yes
+      - python3-kubernetes
+      - python3-openshift
+      - python3-yaml
+    state: present
+    update_cache: true
 
 - name: Add kubectl alias to bashrc
   ansible.builtin.lineinfile:
