--- a/roles/k8s/argocd/tasks/main.yml
+++ b/roles/k8s/argocd/tasks/main.yml
@@ -1,4 +1,4 @@
-- name: Ensure ArgoCD namespace exists
+- name: Ensure Argo CD namespace exists
   kubernetes.core.k8s:
     api_version: v1
     kind: Namespace
@@ -6,13 +6,13 @@
     state: present
     kubeconfig: /etc/kubernetes/admin.conf
 
-- name: Install Argo CD HA manifests
+- name: Install Argo CD HA manifests
   kubernetes.core.k8s:
     state: present
-    src: https://raw.githubusercontent.com/argoproj/argo-cd/{{ argocd_version }}/manifests/ha/install.yaml
+    src: "https://raw.githubusercontent.com/argoproj/argo-cd/{{ argocd_version }}/manifests/ha/install.yaml"
     kubeconfig: /etc/kubernetes/admin.conf
 
-- name: Patch Argo CD Server Service to LoadBalancer
+- name: Patch Argo CD Server service to LoadBalancer
   kubernetes.core.k8s:
     state: patched
     kind: Service
@@ -25,19 +25,19 @@
         type: "{{ argocd_server_service_type }}"
     kubeconfig: /etc/kubernetes/admin.conf
 
-- name: Wait for Argo CD HA pods to be ready
+- name: Wait for Argo CD server deployment to be ready
   kubernetes.core.k8s_info:
     api_version: apps/v1
     kind: Deployment
-    namespace: "{{ argocd_namespace }}"
     name: argocd-server
+    namespace: "{{ argocd_namespace }}"
     kubeconfig: /etc/kubernetes/admin.conf
   register: argo_deploy
-  until: argo_deploy.resources[0].status.availableReplicas | default(0) >= 2
+  until: argo_deploy.resources[0].status.availableReplicas | default(0) >= 1
   retries: 15
   delay: 10
 
-- name: Show Argo CD initial admin password
+- name: Show Argo CD initial admin password
   command: >
     kubectl -n {{ argocd_namespace }}
       get secret argocd-initial-admin-secret
@@ -45,6 +45,12 @@
   register: argo_password
   changed_when: false
 
-- name: Display Argo CD admin password
+- name: Display Argo CD admin password
   ansible.builtin.debug:
-    msg: "🎉 Argo CD admin password = {{ argo_password.stdout }}"
+    msg: "🎉 Argo CD admin password = {{ argo_password.stdout }}"
+
+- name: Bootstrap ApplicationSet for environment discovery
+  kubernetes.core.k8s:
+    state: present
+    definition: "{{ lookup('file', 'files/argocd-applicationset.yaml') | from_yaml }}"
+    kubeconfig: /etc/kubernetes/admin.conf
