make sure to fetch correctly

--- a/playbooks/k8s_final.yml
+++ b/playbooks/k8s_final.yml
@@ -5,7 +5,7 @@
     - k8s/kube_join
 
 - name: Deploy CNI & Argo CD
-  hosts: k8scluster1
+  hosts: k8cluster1
   become: yes
   roles:
     - k8s/cni
