--- a/roles/k8s/kube_join/tasks/main.yml
+++ b/roles/k8s/kube_join/tasks/main.yml
@@ -12,6 +12,7 @@
     src: /tmp/join.sh
     dest: /tmp/join.sh
     mode: '0755'
+    remote_src: false
 
 - name: Run kubeadm join using copied script
   shell: bash /tmp/join.sh
