moving the kubectl alias management to kubectl pkg

--- a/roles/common/apps/kubectl/tasks/main.yml
+++ b/roles/common/apps/kubectl/tasks/main.yml
@@ -45,6 +45,21 @@
     update_cache: no
   become: true
 
+- name: Add kubectl alias to bashrc
+  ansible.builtin.lineinfile:
+    path: "/home/{{ ansible_user }}/.bashrc"
+    line: 'alias k=kubectl'
+    create: yes
+  become: false
+  run_once: true
+
+- name: Source bashrc for kubectl alias (optional)
+  ansible.builtin.shell: source /home/{{ ansible_user }}/.bashrc
+  args:
+    executable: /bin/bash
+  when: ansible_user_shell == "/bin/bash"
+  become: false
+
 - name: Check if packages are already held
   ansible.builtin.command: apt-mark showhold
   register: held_pkgs
