--- a/roles/lb/haproxy/tasks/main.yml
+++ b/roles/lb/haproxy/tasks/main.yml
@@ -11,7 +11,7 @@
     name: "{{ item.key }}"
     value: "{{ item.value }}"
     state: present
-    reload: yes
+    reload: true
   loop:
     - { key: 'net.ipv4.ip_nonlocal_bind', value: '1' }
     - { key: 'net.ipv4.ip_forward', value: '1' }
